--- a/_posts/2019-07-10-the-us-narrative-today.html
+++ b/_posts/2019-07-10-the-us-narrative-today.html
@@ -2417,107 +2417,107 @@ stories:
   domain: http://www.freemansd.com/
   link: https://www.freemansd.com/content/have-you-visited-freeman-farmers-market
 images:
-- name: aws-s3-stories-internet-gauages-3.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-internet-gauages-3.jpg
-- name: capital-battle-capitolbattle-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-marcel-duchamp.jpg
-- name: walled-garden-walled-garden-free-woman.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-free-woman.jpg
-- name: stories-new-machine-road-blue-circuit-4.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-machine-road-blue-circuit-4.jpg
-- name: ellis-island-ellisisland-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-smoking-cigarette.jpg
-- name: downtown-los-angeles-downtown-la-constitution.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-constitution.JPG
-- name: oldhouse-granaryfield-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-blue-granite.jpg
-- name: gypsymosaic-gypsy-eyes-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-aqua.jpg
-- name: rockingchair-rockingchair-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-cinnamon-rolls.jpg
-- name: victoria-victoria-corner-hotel-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/victoria-victoria-corner-hotel-blue-brush.jpg
-- name: berlinwall2-berlinwall-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-light-dali.jpg
-- name: carry-load-carryload-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-matrix.jpg
-- name: dc-statue-dcstatue-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-sand-paper.jpg
-- name: beach-clouds-lifeguard-beachclouds-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-colored-circuits.jpg
-- name: old-cabin-oldcabin-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-rainbow-festival.jpg
-- name: store-on-corner-store-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-colorful-dream.jpg
-- name: paris-paris-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-blue-circuit.jpg
-- name: border-crossing-bordercrossing-marcel-duchamp.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-marcel-duchamp.png
-- name: nazi-invasion-P6180010.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-P6180010.jpg
-- name: meadowbutterfly-meadow-butterfly-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-diego-rivera1.jpg
-- name: aws-s3-stories-36349148770-1a9d2692b2-z.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-36349148770-1a9d2692b2-z.jpg
-- name: gears-4882162452-fa3126b38d-b-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-hot-spicy.jpg
-- name: adam-smith-adam-smith-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-ww2-dresden.jpg
-- name: berlinwall2-berlinwall-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-pablo-blue.jpg
-- name: fence-fence-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-matrix.jpg
-- name: white-house-lawn-white-house-window-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-dark-dali.jpg
-- name: window-window-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-constitution.jpg
-- name: art-museum-art-museum-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-crunch-paper.jpg
-- name: crow_smoking_cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_smoking_cigarette.jpg
-- name: san-francisco-city-bridge-sf-city-bridge-blue-circuit-4.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-blue-circuit-4.jpg
-- name: containership-containership-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-bright-sand.jpg
-- name: aws-s3-stories-fence-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-fence-ww2-dresden.jpg
-- name: windowmountain-window-mountain-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-yellow-collage.jpg
-- name: dragon-desert-desert-dragon-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-purple-pond.jpg
-- name: fence-fence-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-dark-soul.jpg
-- name: aws-s3-stories-new-57-64-800-500-0-max-0--5--5.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-57-64-800-500-0-max-0--5--5.jpg
-- name: oldhousecars-house-old-cars-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-ww2-dresden.jpg
-- name: docks-docks-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-umberto-bocc.jpg
-- name: castle-wall-DSC-0067-spagetti-accident.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-spagetti-accident.JPG
+- name: oldhouse-granaryfield-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-neo-instinct.jpg
+- name: crow-crow-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-colorful-dream.jpg
+- name: aws-s3-mountainlake-mountainlake-still.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-mountainlake-mountainlake-still.jpg
+- name: stories-new-40-45-800-500-0-max-0--5--5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-40-45-800-500-0-max-0--5--5.jpg
+- name: bordercrossing-bordercrossing-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-sunday.jpg
+- name: walled-garden-walled-garden-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-diego-rivera1.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-sand-paper.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-sand-paper.JPG
+- name: machine-road-machine-road-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-graham-sutherland.jpg
+- name: flower-barbed-wire-flower-barbed-wire-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-ww2-color.jpg
+- name: oldhotel-oldhotel-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-smooth-ride.jpg
+- name: locked-up-steam-lock-up-steam-jap-dys-1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-jap-dys-1.jpg
+- name: redondo-beach-harbor-redondo-beach-harbor-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-dark-soul.jpg
+- name: crow_sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_sunday.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-light-dali.jpg
+- name: sand-hand-sand-hand-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-smoking-cigarette.jpg
+- name: old-barn-old-barn-1500-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-smoking-cigarette.jpg
+- name: locked-up-steam-lock-up-steam-china-prop.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-china-prop.jpg
+- name: eduardo-eduardo-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-space-pizza.jpg
+- name: sand-hand-sand-hand-blue-circuit-3.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-blue-circuit-3.jpg
+- name: gypsy-wagon-gypsywagon-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-constitution.jpg
+- name: white-house-whitehouse-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-rainbow-festival.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-atari-missle.jpg
+- name: border-crossing-bordercrossing-kandinsky-bv.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-kandinsky-bv.png
+- name: supreme-court-supremecourt-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-kandinsky-bv.jpg
+- name: san-francisco-street-view-san-francisco-street-view-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-dry-skin.jpg
+- name: white-house-whitehouse-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-space-pizza.jpg
+- name: art-museum-art-museum-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-gred-mash.jpg
+- name: death-valley-death-valley-national-park-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-alien-goggles.jpg
+- name: statue-of-liberty-front-view-statueofliberty-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-dry-skin.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-blue-circuit-3.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-blue-circuit-3.png
+- name: amusement-park-amusement-park-2-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-crunch-paper.jpg
+- name: border-fence-border-fence-on-hill-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-deep-connections.jpg
+- name: old-door-lock-old-door-lock-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-neo-instinct.jpg
+- name: beach-clouds-lifeguard-beachclouds-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-dry-skin.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-colorful-blocks.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-colorful-blocks.JPG
+- name: oldroad-old-road-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-crabapple.jpg
+- name: server-cloud-server-racks-clouds-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-crafty-painting.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-purp-paper.jpg
+- name: hollywood-building-hollywood-building-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-ww2-dresden.jpg
+- name: crow_constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_constitution.jpg
+- name: downtown-fredericksburg.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg.JPG
+- name: gears-4882162452-fa3126b38d-b-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-kand-two.jpg
+- name: oldhotel-oldhotel-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-crunch-paper.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-purple-storm.jpg
+- name: old-church-oldchurch-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-marcel-duchamp.jpg
+- name: meadowbutterfly-meadow-butterfly-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-yellow-paper.jpg
+- name: abe-lincoln-one-ww2-dresden-file-00-00-07-91.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-ww2-dresden-file-00-00-07-91.jpg
+- name: stories-new-van-gogh-starry-night-container-bridge-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-van-gogh-starry-night-container-bridge-2.jpg
 - name: downtown-los-angeles-downtown-la-colorful-blocks.JPG
   url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-colorful-blocks.JPG
-- name: fast-lights-freeway-redes-fast-flux-623x425-free-woman.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-free-woman.jpg
-- name: border-crossing-bordercrossing-monet-one.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-monet-one.png
-- name: sand-hand-sand-hand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand.jpg
-- name: eduardo-eduardo-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-graham-sutherland.jpg
-- name: stories-machine-road-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-machine-road-light-dali.jpg
-- name: store-on-corner-store-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-dali-three.jpg
-- name: carry-load-carryload-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-far-away.jpg
-- name: yosemite-yosemite-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-diego-rivera1.jpg
-- name: power-lines-power-lines-empty-space-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-constitution.jpg
-- name: aws-s3-stories-server-cloud1-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-server-cloud1-internet-numbers.jpg
-- name: dc-statue-dcstatue-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-emily-carr.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-far-away.jpg
+- name: paris-paris-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-marcel-duchamp.jpg
 ---
 Letters To The Editor.&nbsp;Border Arrests Drop As Mexico Crackdown Appears To Cut Crossings.&nbsp;'Midsommar' Scares In Ways Other Horror Films Won't.&nbsp;Booker Speechless Over McConnell Slaveholder Comment.&nbsp;Mercer Residents Get To Experience Shakertown Free For One Week.&nbsp;Colin Hanks Posts Michael Keaton Picture To Mark Dad Tom Hanks' Birthday.&nbsp;Sam's Field First Season.&nbsp;Zabiegi Na Cellulit Wojkowice.&nbsp;
